// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.appauthconfig.v1;

import "google/protobuf/empty.proto";
import "teleport/appauthconfig/v1/appauthconfig.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/appauthconfig/v1;appauthconfigv1";

// AppAuthConfigService provides CRUD ops for app auth resources.
service AppAuthConfigService {
  // CreateAppAuthConfig creates a new AppAuthConfig.
  rpc CreateAppAuthConfig(CreateAppAuthConfigRequest) returns (AppAuthConfig);
  // GetAppAuthConfig returns the specified AppAuthConfig.
  rpc GetAppAuthConfig(GetAppAuthConfigRequest) returns (AppAuthConfig);
  // ListAppAuthConfigs lists AppAuthConfig resources.
  rpc ListAppAuthConfigs(ListAppAuthConfigsRequest) returns (ListAppAuthConfigsResponse);
  // UpdateAppAuthConfig updates an existing AppAuthConfig.
  rpc UpdateAppAuthConfig(UpdateAppAuthConfigRequest) returns (AppAuthConfig);
  // UpsertAppAuthConfig creates or replaces a AppAuthConfig.
  rpc UpsertAppAuthConfig(UpsertAppAuthConfigRequest) returns (AppAuthConfig);
  // DeleteAppAuthConfig deletes the specified AppAuthConfig.
  rpc DeleteAppAuthConfig(DeleteAppAuthConfigRequest) returns (google.protobuf.Empty);
}

// Request for CreateAppAuthConfig.
message CreateAppAuthConfigRequest {
  // Config is the resource to create.
  AppAuthConfig config = 1;
}

// GetAppAuthConfigRequest is a request for GetAppAuthConfig.
message GetAppAuthConfigRequest {
  // Name is the name of the AppAuthConfig to retrieve.
  string name = 1;
}

// ListAppAuthConfigsRequest is the request for ListAppAuthConfigs.
message ListAppAuthConfigsRequest {
  // PageSize is the maximum number of items to return.
  // The server may impose a different page size at its discretion.
  int32 page_size = 1;
  // PageToken is the page token value returned from a prior list request, if any.
  string page_token = 2;
}

// ListAppAuthConfigsResponse is the response from ListAppAuthConfigs.
message ListAppAuthConfigsResponse {
  // Configs is a page of app auth configs.
  repeated AppAuthConfig configs = 1;
  // NextPageToken is the token that can be used to retrieve the next page of
  // results or empty if there are no more pages.
  string next_page_token = 2;
}

// Request for UpdateAppAuthConfig.
message UpdateAppAuthConfigRequest {
  // Config is the resource to update.
  AppAuthConfig config = 1;
}

// Request for UpsertAppAuthConfig.
message UpsertAppAuthConfigRequest {
  // Config is the resource to upsert.
  AppAuthConfig config = 1;
}

// Request for DeleteAppAuthConfig.
message DeleteAppAuthConfigRequest {
  // Name is the name of the AppAuthConfig to delete.
  string name = 1;
}
